Trying to fix footer to content spacing

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -203,7 +203,7 @@ footer{
 }
 
 .button_section{
-      background-color: #28221B;
+      padding-bottom: 200px;
 }
 
 .footerupdates,
